# Window_app

STM32_UART_Monitor/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  STM32_UART_Monitor.csproj  STM32_UART_Monitor.sln
STM32_UART_Monitor/Helpers/: Converters.cs
STM32_UART_Monitor/Models/: SensorData.cs
STM32_UART_Monitor/Services/: SerialService.cs
STM32_UART_Monitor/ViewModels/: MainViewModel.cs
Terminal_app/: README.md
Terminal_app/VehicleMonitor_Window_app/: .cproject  .project  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialmanager.cpp  serialmanager.h
Terminal_app/VehicleMonitor_Window_app/Debug_FLASH/: VehicleMonitor.args  VehicleMonitor.map
Terminal_app/VehicleMonitor_Window_app/Debug_FLASH/src/: clock_init.args  lpuart1.d
Terminal_app/VehicleMonitor_Window_app/Project_Settings/Debugger/: VehicleMonitor_Debug_RAM_PNE.launch  VehicleMonitor_Release_RAM_PNE.launch
Terminal_app/VehicleMonitor_Window_app/src/: clock_init.c  clock_init.h  lpuart1.c  peripheral_init.c  peripheral_init.h
Terminal_app/VehicleMonitor_mcu/Debug_FLASH/: VehicleMonitor.elf  makefile
Terminal_app/VehicleMonitor_mcu/Debug_FLASH/Project_Settings/Startup_Code/: startup.d  startup_S32K144.args  system_S32K144.d
Terminal_app/VehicleMonitor_mcu/Debug_FLASH/src/: clock_init.d  main.d  peripheral_init.d  subdir.mk
Terminal_app/VehicleMonitor_mcu/Project_Settings/Debugger/: VehicleMonitor_Debug_FLASH_PNE.launch  VehicleMonitor_Release_FLASH_PNE.launch
Terminal_app/VehicleMonitor_mcu/src/: lpuart1.h  main.c
